--- a/docroot/themes/ghsa/css/app.css
+++ b/docroot/themes/ghsa/css/app.css
@@ -4247,7 +4247,9 @@ img.no_image_resize {
 .button-container.width-300px a.button:after {
   display: none; }
 
-.button-container a.button {
+.button-container a.button,
+main .button-container input.form-submit,
+main .button-container input.button.form-submit {
   position: relative;
   margin: 0;
   background: transparent;
@@ -4258,6 +4260,15 @@ img.no_image_resize {
   border-radius: 4px;
   padding: 7px 26px 8px 18px;
   display: inline-block; }
+
+main .button-container input.button.form-submit {
+  line-height: inherit; }
+
+.button-container:hover a.button,
+main .button-container:hover input.form-submit,
+main .button-container:hover input.button.form-submit {
+  opacity: 1;
+  background-color: rgba(0, 0, 0, 0.1); }
 
 .button-container .button-decoration {
   position: absolute;
@@ -4278,6 +4289,29 @@ img.no_image_resize {
   color: #0078a9;
   border-radius: 1000px;
   padding: 10px 18px; }
+
+.bi-button-container a.bi-button,
+main .bi-button-container input.form-submit,
+main .bi-button-container input.button.form-submit {
+  position: relative;
+  margin: 0;
+  background-color: transparent;
+  color: #fff;
+  font-size: 20px;
+  line-height: 1.2;
+  border-radius: 1000px;
+  padding: 16px 30px;
+  display: inline-block;
+  opacity: .95; }
+
+main .bi-button-container input.button.form-submit {
+  line-height: inherit; }
+
+.bi-button-container:hover a.bi-button,
+main .bi-button-container:hover input.form-submit,
+main .bi-button-container:hover input.button.form-submit {
+  opacity: 1;
+  background-color: rgba(0, 0, 0, 0.1); }
 
 /**************************************************************/
 /*  re-add bottom margins  */
