--- a/docroot/themes/ghsa/css/app.css
+++ b/docroot/themes/ghsa/css/app.css
@@ -4445,11 +4445,11 @@ header {
   min-width: 450px; }
 
 .header_primary_menu > ul,
-.header_primary_menu .menu-wrapper > ul {
+.header_primary_menu_container .header_primary_menu .menu-wrapper > ul {
   text-align: center; }
 
 .header_primary_menu > ul > li,
-.header_primary_menu .menu-wrapper > ul > li {
+.header_primary_menu_container .header_primary_menu .menu-wrapper > ul > li {
   text-align: center;
   display: inline-block;
   vertical-align: top; }
@@ -4461,8 +4461,8 @@ header {
 
 header .header_primary_menu > ul > li.active-trail > a,
 header .header_primary_menu > ul > li:hover a,
-header .header_primary_menu .menu-wrapper > ul > li.active-trail > a,
-header .header_primary_menu .menu-wrapper > ul > li:hover a {
+header .header_primary_menu_container .header_primary_menu .menu-wrapper > ul > li.active-trail > a,
+header .header_primary_menu_container .header_primary_menu .menu-wrapper > ul > li:hover a {
   color: #0078a9; }
 
 .header_primary_menu ul ul {
@@ -4531,14 +4531,18 @@ body.mobile_menu_is_open .mobile_menu {
   position: relative; }
 
 .mobile_menu .header_primary_menu > ul,
-.mobile_menu .header_primary_menu > ul > li {
+.mobile_menu .header_primary_menu > ul > li,
+.mobile_menu .header_primary_menu .menu-wrapper > ul,
+.mobile_menu .header_primary_menu .menu-wrapper > ul > li {
   text-align: left; }
 
-.mobile_menu .header_primary_menu > ul > li > a {
+.mobile_menu .header_primary_menu > ul > li > a,
+.mobile_menu .header_primary_menu .menu-wrapper > ul > li > a {
   font-size: 28px;
   text-transform: uppercase; }
 
-.mobile_menu .header_primary_menu > ul > li {
+.mobile_menu .header_primary_menu > ul > li,
+.mobile_menu .header_primary_menu .menu-wrapper > ul > li {
   font-size: inherit; }
 
 .mobile_menu .header_primary_menu ul ul {
@@ -5203,9 +5207,11 @@ footer .contact_email {
     display: none; }
   .footer_primary_menu {
     display: block; }
-  .footer_primary_menu > ul {
+  .footer_primary_menu > ul,
+  .footer_primary_menu .menu-wrapper > ul {
     display: block; }
-  .footer_primary_menu > ul > li {
+  .footer_primary_menu > ul > li,
+  .footer_primary_menu .menu-wrapper > ul > li {
     display: inline-block;
     width: 33%;
     vertical-align: top;
@@ -5293,7 +5299,8 @@ footer .contact_email {
     width: 31%; }
   .mobile_640_column_2 {
     width: 38%; }
-  .mobile_menu .header_primary_menu > ul > li > a {
+  .mobile_menu .header_primary_menu > ul > li > a,
+  .mobile_menu .header_primary_menu .menu-wrapper > ul > li > a {
     font-size: 22px; }
   .mobile_menu .header_primary_menu ul ul {
     font-size: 20px; }
