Hard code State Laws page link in main nav.

--- a/docroot/themes/ghsa/templates/pages/page--front.html.twig
+++ b/docroot/themes/ghsa/templates/pages/page--front.html.twig
@@ -51,7 +51,7 @@
 								<li><a href="#">Law Enforcement</a></li>
 							</ul>
 						</li>
-						<li class="menu-item--expanded"><a href="#">State Laws</a>
+						<li class="menu-item--expanded"><a href="/state-laws">State Laws</a>
 							<ul>
 								<li><a href="#">Laws By Issue</a></li>
 								<li><a href="#">Laws By State</a></li>
