Modify the state individual view template

--- a/docroot/themes/ghsa/templates/pages/page--state-laws-individual-state.html.twig
+++ b/docroot/themes/ghsa/templates/pages/page--state-laws-individual-state.html.twig
@@ -176,52 +176,7 @@
 
 				<!-- START: columns -->
 				<div class="columns small-7 small-offset-1 column_no_padding_left">
-
-					<!-- START: .block.block-view-featured-initiative -->
-					<div class="block block-view-featured-initiative">
-
-						<h2 class="icon_initiative">Featured Initiative</h2>
-
-						<!-- START: view-featured-initiative -->
-						<div class="view view-featured-initiative">
-
-							<!-- START: views-row -->
-							<div class="views-row inner_row">
-
-								<!-- START: inner_column_1 -->
-								<div class="inner_column inner_column_1">
-
-									<div class="views-field field-image"><img src="{{ theme_path }}/images/image-featured-inititative-1.jpg" alt="yadda" /></div>
-
-								</div>
-								<!-- END: inner_column_1 -->
-
-								<!-- START: inner_column_2 -->
-								<div class="inner_column inner_column_2">
-
-									<div class="views-field field-title"><h2><a href="#">GHSA and Ford DSFL Award Funds to Support State Teen Safe Driving Activities</a></h2></div>
-									<div class="views-field field-summary"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi pariatur. <a href="#">Learn More</a></p></div>
-									<div class="views-field field-tags-state">
-										<h3>Choose State</h3>
-										<ul>
-											<li><a href="#">Alabama</a></li>
-											<li><a href="#">Wyoming</a></li>
-										</ul>
-									</div>
-									<div class="views-field field-link"><a href="#" class="button">See All Campaigns</a></div>
-
-								</div>
-								<!-- END: inner_column_2 -->
-
-							</div>
-							<!-- END: view-row -->
-
-						</div>
-						<!-- END: view-featured-initiative -->
-
-					</div>
-					<!-- END: .block.block-view-featured-initiative -->
-
+					{{ page.content }}
 				</div>
 				<!-- END: columns -->
 
