--- a/docroot/themes/ghsa/templates/pages/page--front.html.twig
+++ b/docroot/themes/ghsa/templates/pages/page--front.html.twig
@@ -28,9 +28,10 @@
 				<nav class="header_primary_menu" id="js_primary_menu">
 
 					<h2 class="hidden">Primary Menu</h2>
-					<ul class="menu">
-						<li class="active-trail menu-item--expanded"><a href="#">Issues</a>
-							<ul>
+					<ul class="dropdown menu" data-dropdown-menu>
+						<li class="active-trail menu-item--expanded">
+							<a href="#">Issues</a>
+							<ul class="menu">
 								<li><a href="#">Distracted Driving</a></li>
 								<li class="menu-item--expanded"><a href="#">Impaired Driving</a>
 									<ul>
@@ -720,9 +721,9 @@
 						<nav class="footer_primary_menu columns small-8 small-offset-1 end column_no_padding_both" id="js_footer_primary_menu">
 
 							<h2 class="hidden">Primary Menu Reiteration</h2>
-							<ul class="menu">
+							<ul class="dropdown menu" data-dropdown-menu>
 								<li><a href="#">Issues</a>
-									<ul>
+									<ul class="menu">
 										<li><a href="#">Distracted Driving</a></li>
 										<li><a href="#">Impaired Driving</a></li>
 										<li><a href="#">Occupant Protection</a></li>
@@ -931,9 +932,8 @@
 <div id="js_yardstick"></div>
 
 <div id="js_mobile_menu" class="mobile_menu"><div class="mobile_menu_inner">
-		<div class="mobile_menu_header">
-			<div class="js_close">Close</div>
-			<h2>Menu</h2>
-		</div>
-	</div></div>
-
+	<div class="mobile_menu_header">
+		<div class="js_close">Close</div>
+		<h2>Menu</h2>
+	</div>
+</div></div>
