--- a/docroot/themes/ghsa/templates/html--front.html.twig
+++ b/docroot/themes/ghsa/templates/html--front.html.twig
@@ -6,8 +6,9 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
 
     <!-- move these to .info during theming -->
-  <link rel="stylesheet" type="text/css" href="{{ theme_path }}/css/app.css" />
-  <link rel="stylesheet" type="text/css" href="{{ theme_path }}/foundation/css/foundation.css" />
+    <link rel="stylesheet" type="text/css" href="{{ theme_path }}/css/app.css" />
+    <link rel="stylesheet" type="text/css" href="{{ theme_path }}/foundation/css/foundation.css" />
+  <link rel="stylesheet" type="text/css" href="{{ theme_path }}/css/override.css" />
     <link rel="stylesheet" type="text/css" href="{{ theme_path }}/foundation/css/app.css" />
     <link rel="stylesheet" type="text/css" href="{{ theme_path }}/css/ie.css" />
     <link rel="stylesheet" type="text/css" href="{{ theme_path }}/css/home.css" />
