--- a/docroot/themes/ghsa/templates/html--state-laws-individual-state.html.twig
+++ b/docroot/themes/ghsa/templates/html--state-laws-individual-state.html.twig
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -6,24 +7,20 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
 
   <!-- move these to .info during theming -->
-  <link rel="stylesheet" type="text/css" href="{{ theme_path }}/css/app.css" />
-  <link rel="stylesheet" type="text/css" href="{{ theme_path }}/foundation/css/foundation.css" />
-  <link rel="stylesheet" type="text/css" href="{{ theme_path }}/css/override.css" />
-  <link rel="stylesheet" type="text/css" href="{{ theme_path }}/foundation/css/app.css" />
-  <link rel="stylesheet" type="text/css" href="{{ theme_path }}/css/ie.css" />
-  <link rel="stylesheet" type="text/css" href="{{ theme_path }}/css/home.css" />
+  <link rel="stylesheet" type="text/css" href="/sites/html/css/app.css" />
+  <link rel="stylesheet" type="text/css" href="/sites/html/css/ie.css" />
+
+  <!-- move these to .info during theming -->
+  <script type="text/javascript" src="/sites/html/js/jquery-2.2.3.min.js"></script>
+  <!--<script type="text/javascript" src="bower_components/what-input/what-input.js"></script>-->
+  <script type="text/javascript" src="/sites/html/js/foundation.js"></script>
+  <script type="text/javascript" src="/sites/html/js/app.js"></script>
+  <script type="text/javascript" src="/sites/html/js/scripts.js"></script>
 
 </head>
-<body class="front">
-{{ page }}
-</body>
 
-<script type="text/javascript" src="{{ theme_path }}/foundation/js/vendor/jquery.js"></script>
-<!--<script type="text/javascript" src="bower_components/what-input/what-input.js"></script>-->
-<script type="text/javascript" src="{{ theme_path }}/foundation/js/vendor/foundation.js"></script>
-<script type="text/javascript" src="{{ theme_path }}/foundation/js/app.js"></script>
-<link rel="stylesheet" type="text/css" href="{{ theme_path }}/css/home.css" />
-<script type="text/javascript" src="{{ theme_path }}/js/jquery.cycle2.js"></script>
-<script type="text/javascript" src="{{ theme_path }}/js/home.js"></script>
-<script type="text/javascript" src="{{ theme_path }}/js/scripts.js"></script>
+<body>
+
+</body>
+  {{ page }}
 </html>
