--- a/docroot/themes/ghsa/templates/pages/page--front.html.twig
+++ b/docroot/themes/ghsa/templates/pages/page--front.html.twig
@@ -52,10 +52,10 @@
 								<li><a href="#">Law Enforcement</a></li>
 							</ul>
 						</li>
-						<li class="menu-item--expanded"><a href="/state-laws">State Laws</a>
+						<li class="menu-item--expanded"><a href="#">State Laws</a>
 							<ul>
-								<li><a href="#">Laws By Issue</a></li>
-								<li><a href="#">Laws By State</a></li>
+								<li><a href="state-laws/by-issue">Laws By Issue</a></li>
+								<li><a href="state-laws/by-state">Laws By State</a></li>
 							</ul>
 						</li>
 						<li class="menu-item--expanded"><a href="#">Resources</a>
