--- a/docroot/themes/ghsa/templates/pages/page--state-laws.html.twig
+++ b/docroot/themes/ghsa/templates/pages/page--state-laws.html.twig
@@ -57,8 +57,8 @@
 						</li>
 						<li class="menu-item--expanded"><a href="#">State Laws</a>
 							<ul>
-								<li><a href="state-laws/by-issue">Laws By Issue</a></li>
-								<li><a href="state-laws/by-state">Laws By State</a></li>
+								<li><a href="/state-laws/by-issue">Laws By Issue</a></li>
+								<li><a href="/state-laws/by-state">Laws By State</a></li>
 							</ul>
 						</li>
 						<li class="menu-item--expanded"><a href="#">Resources</a>
