--- a/docroot/themes/ghsa/templates/pages/page--state-laws.html.twig
+++ b/docroot/themes/ghsa/templates/pages/page--state-laws.html.twig
@@ -175,7 +175,7 @@
 			<div class="row">
 
 				<!-- START: columns -->
-				<div class="columns small-7 small-offset-1 column_no_padding_left">
+				<div class="columns small-10 small-offset-1 end column_no_padding_right column_no_padding_left">
 					{{ page.content }}
 				</div>
 				<!-- END: columns -->
