Clean up header a bit for demo

--- a/docroot/themes/ghsa/templates/pages/page--state-laws-individual-state.html.twig
+++ b/docroot/themes/ghsa/templates/pages/page--state-laws-individual-state.html.twig
@@ -98,7 +98,7 @@
 			<!-- END: div.header_primary_menu_container -->
 
 			<!-- START: div.header_secondary_menu_container -->
-			<div class="header_secondary_menu_container inner_column column_no_padding_both">
+			<div class="header_secondary_menu_container inner_column column_no_padding_both" style="display: none">
 				<nav class="header_secondary_menu" id="js_secondary_menu">
 
 					<h2 class="hidden">Secondary Menu</h2>
@@ -112,7 +112,7 @@
 			<!-- END: div.header_secondary_menu_container -->
 
 			<!-- START: header_search_container -->
-			<div class="header_search_container inner_column column_no_padding_both">
+			<div class="header_search_container inner_column column_no_padding_both" style="display: none">
 
 				<!-- START: header_search -->
 				<div class="header_search" id="js_search_desktop">
