Dynammic page titles

--- a/docroot/themes/ghsa/templates/html--state-laws-individual-issue.html.twig
+++ b/docroot/themes/ghsa/templates/html--state-laws-individual-issue.html.twig
@@ -14,7 +14,9 @@
   <link rel="stylesheet" type="text/css" href="{{ theme_path }}/css/home.css" />
 </head>
 <body class="front">
+{#{{ page_top }}#}
 {{ page }}
+{#{{ page_bottom }}#}
 </body>
 
 <script type="text/javascript" src="{{ theme_path }}/foundation/js/vendor/jquery.js"></script>
