Add copy to issues and state pages

--- a/docroot/themes/ghsa/templates/views-view--state_laws_individual_state.html.twig
+++ b/docroot/themes/ghsa/templates/views-view--state_laws_individual_state.html.twig
@@ -38,6 +38,9 @@
   ]
 %}
 
+<div class="row" style="padding-left: 30px; padding-top:0px;">
+{{ copy|raw }}
+</div>
 <ul class="accordion" data-accordion role="tablist">
   {#<div{{ attributes.addClass(classes) }}>#}
   {{ title_prefix }}
