--- a/docroot/themes/ghsa_foundation/css/override.css
+++ b/docroot/themes/ghsa_foundation/css/override.css
@@ -19,10 +19,16 @@
 
 /* Emphasize header in accordion */
 .accordion-title {
-    font-size: 1.25em;
+    color: #fff;
+    font-size: 100%;
+    background-color: #0078a9;
 }
 
 .accordion-content {
     font-size: 1rem;
     padding-left: 30px;
+}
+
+.law-title {
+    font-weight: bold;
 }
