--- a/docroot/themes/ghsa_foundation/scss/layout/_header.scss
+++ b/docroot/themes/ghsa_foundation/scss/layout/_header.scss
@@ -1,1 +1,13 @@
 // Non-modular or client styles for .l-header region.
+// .header-site-info {
+//   margin-top: 7px;
+// }
+// .header-organization {
+//   font-weight: 400;
+// }
+// .header-tagline {
+//   color: #6d6e71;
+// }
+// .header-primary-menu {
+//   margin-top: 12px;
+// }
