--- a/docroot/themes/ghsa_foundation/templates/menus/breadcrumb.html.twig
+++ b/docroot/themes/ghsa_foundation/templates/menus/breadcrumb.html.twig
@@ -10,9 +10,9 @@
  */
 #}
 
-			
+
 <!-- START: section.main_breadcrumb_container -->
-<div class="main_breadcrumb_container columns small-10 column_no_padding_left">
+<div class="main_breadcrumb_container columns column_no_padding_left">
 
 	<div class="breadcrumb">
 	{% if breadcrumb %}
