--- a/docroot/themes/ghsa_foundation/css/ghsa_foundation.css
+++ b/docroot/themes/ghsa_foundation/css/ghsa_foundation.css
@@ -5262,7 +5262,8 @@ main .breadcrumb ul {
   content: ""; }
 
 .breadcrumb a {
-  padding: 4px 0; }
+  position: relative;
+  z-index: 10; }
 
 .breadcrumb li.first a {
   padding-left: 0; }
