--- a/docroot/themes/ghsa/templates/pages/page.html.twig
+++ b/docroot/themes/ghsa/templates/pages/page.html.twig
@@ -82,7 +82,7 @@
 		<!-- END: div.header_primary_menu_container -->
 				
 		<!-- START: div.header_secondary_menu_container -->
-		<div class="header_secondary_menu_container inner_column column_no_padding_both" style="display: none">
+		<div class="header_secondary_menu_container inner_column column_no_padding_both">
 			<nav class="header_secondary_menu" id="js_secondary_menu">
 		
 				{% if page.header_row_1_menu_secondary %}
@@ -95,7 +95,7 @@
 				
 		{% if page.header_row_1_menu_secondary %}
 		<!-- START: header_search_container -->
-		<div class="header_search_container inner_column column_no_padding_both" style="display: none">
+		<div class="header_search_container inner_column column_no_padding_both">
 			
 			<!-- START: header_search -->
 			<div class="header_search" id="js_search_desktop">
