--- a/docroot/themes/ghsa_foundation/css/ghsa_foundation.css
+++ b/docroot/themes/ghsa_foundation/css/ghsa_foundation.css
@@ -4790,8 +4790,10 @@ header {
 
 .header_primary_menu_container,
 .header_secondary_menu_container,
-.header_search_container {
-  margin-top: 36px; }
+.header_search_container,
+.secondary_menu_member_login {
+  margin-top: 36px;
+  display: inline-block; }
 
 .header_logo_container {
   width: 37.68%;
@@ -4804,7 +4806,8 @@ header {
   width: 23.24%; }
 
 .header_search_container {
-  width: 4.58%; }
+  width: 4.58%;
+  float: none; }
 
 .header_primary_menu a,
 .header_secondary_menu a {
@@ -4862,6 +4865,7 @@ header {
   padding-left: 12px;
   padding-right: 12px; }
 
+header .header_primary_menu a.is-active,
 header .header_primary_menu > ul > li.active-trail > a,
 header .header_primary_menu > ul > li:hover a,
 header .header_primary_menu_container .header_primary_menu .menu-wrapper > ul > li.active-trail > a,
@@ -5131,7 +5135,11 @@ header .search_form_container .js_close {
 
 .secondary_menu_member_login a {
   background-image: url(../images/icon-header-member-login-1.png);
-  color: #e66c1f; }
+  color: #e66c1f;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+  top: -8px; }
 
 .secondary_menu_partner_with_us a {
   padding-left: 36px;
