--- a/docroot/themes/ghsa_foundation/scss/ghsa/_global.scss
+++ b/docroot/themes/ghsa_foundation/scss/ghsa/_global.scss
@@ -656,8 +656,10 @@ header a:hover	{
 	}
 .header_primary_menu_container,
 .header_secondary_menu_container,
-.header_search_container	{
+.header_search_container,
+.secondary_menu_member_login	{
 	margin-top: 36px;
+	display: inline-block;
 	}
 
 .header_logo_container	{
@@ -673,6 +675,7 @@ header a:hover	{
 	}
 .header_search_container	{
 	width: 4.58%;
+	float: none;
 	}
 
 
@@ -745,10 +748,11 @@ header {
 	padding-left: 12px;
 	padding-right: 12px;
 	}
+header .header_primary_menu a.is-active,
 header .header_primary_menu > ul > li.active-trail > a,
 header .header_primary_menu > ul > li:hover a,
 header .header_primary_menu_container .header_primary_menu .menu-wrapper > ul > li.active-trail > a,
-header .header_primary_menu_container .header_primary_menu .menu-wrapper > ul > li:hover a	{
+header .header_primary_menu_container .header_primary_menu .menu-wrapper > ul > li:hover a {
 	color: $color-blue;
 	}
 
@@ -1071,6 +1075,10 @@ header .search_form_container .js_close	{
 .secondary_menu_member_login a	{
 	background-image: url(../images/icon-header-member-login-1.png);
 	color: #e66c1f;
+	height: 24px;
+	display: inline-block;
+	position: relative;
+	top: -8px;
 	}
 .secondary_menu_partner_with_us a	{
 	padding-left: 36px;
