--- a/docroot/themes/ghsa_foundation/templates/pages/page.html.twig
+++ b/docroot/themes/ghsa_foundation/templates/pages/page.html.twig
@@ -101,6 +101,8 @@
 		</div>
 		<!-- END: div.header_primary_menu_container -->
 
+		<li class="secondary_menu_member_login" title="Member Login"><a href="http://my.ghsa.org/">Member Login</a></li>
+
 		<!-- START: div.header_secondary_menu_container -->
 		<div class="header_secondary_menu_container inner_column column_no_padding_both" style="display: none">
 			<nav class="header_secondary_menu" id="js_secondary_menu">
@@ -115,7 +117,7 @@
 
 		{% if page.header_row_1_menu_secondary %}
 		<!-- START: header_search_container -->
-		<div class="header_search_container inner_column column_no_padding_both" style="display: none">
+		<div class="header_search_container inner_column column_no_padding_both">
 
 			<!-- START: header_search -->
 			<div class="header_search" id="js_search_desktop">
