Jump menu labels change

--- a/docroot/themes/ghsa_foundation/scss/ghsa/_global.scss
+++ b/docroot/themes/ghsa_foundation/scss/ghsa/_global.scss
@@ -749,6 +749,7 @@ header {
 	padding-right: 12px;
 	}
 header .header_primary_menu a.is-active,
+header .header_primary_menu a:hover,
 header .header_primary_menu > ul > li.active-trail > a,
 header .header_primary_menu > ul > li:hover a,
 header .header_primary_menu_container .header_primary_menu .menu-wrapper > ul > li.active-trail > a,
