--- a/docroot/themes/ghsa_foundation/scss/ghsa/_global.scss
+++ b/docroot/themes/ghsa_foundation/scss/ghsa/_global.scss
@@ -1259,7 +1259,7 @@ main .breadcrumb ul	{
 /*  main article */
 
 main article	{
-	padding: 45px 0;
+	// padding: 45px 0;
 	}
 main article h2	{
 	margin-top: 1.5em;
